# Snake

./: .gitignore  CMakeLists.txt  README.md
Farfocel/: CMakeLists.txt
Farfocel/include/Farfocel/Core/: Renderer.hpp  Runtime.hpp
Farfocel/include/Farfocel/Managers/: AnimationManager.hpp  EventManager.hpp  InputManager.hpp  ResourcesManager.hpp  ScenesManager.hpp
Farfocel/include/Farfocel/Utils/: Animation.hpp  AssetStorer.hpp  FunctionCallback.hpp  IScene.hpp  TextureAtlas.hpp
Farfocel/include/Farfocel/Utils/GUI/Widgets/: Button.hpp  Text.hpp
Farfocel/src/Farfocel/Core/: Renderer.cpp  Runtime.cpp
Farfocel/src/Farfocel/Managers/: AnimationManager.cpp  EventManager.cpp  InputManager.cpp  ResourcesManager.cpp  ScenesManager.cpp
Farfocel/src/Farfocel/Utils/: Animation.cpp  TextureAtlas.cpp
Farfocel/src/Farfocel/Utils/GUI/: Button.cpp  Text.cpp
Snake/: CMakeLists.txt  imgui.ini  score.txt
Snake-Binary/Release/: imgui.ini  score.txt
Snake/src/: Main.cpp  SnakeGame.cpp  SnakeGame.hpp
Snake/src/Scenes/: GameOver.cpp  GameOver.hpp  Gameplay.cpp  Gameplay.hpp  Menu.cpp  Menu.hpp
Snake/src/SnakeLogic/: Board.cpp  Board.hpp  Buff.hpp  Cell.hpp  Snake.cpp  Snake.hpp
Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
